olvidaste tu password

--- a/login/recuperarpasword.html
+++ b/login/recuperarpasword.html
@@ -13,23 +13,16 @@
   <div class="row">
     <div class="Absolute-Center is-Responsive">
       <div id="logo-container">
-      	<label>LOGIN</label>
+      	<label>¿Olvidaste tu password?</label>
       </div>
       <div class="col-sm-12 col-md-10 col-md-offset-1">
         <form action="" id="loginForm">
           <div class="form-group input-group">
             <span class="input-group-addon"><i class="glyphicon glyphicon-user"></i></span>
-            <input class="form-control" type="text" name='username' placeholder="username"/>          
+            <input class="form-control" type="text" name='username' placeholder="Ingrese su e-mail"/>          
           </div>
-          <div class="form-group input-group">
-            <span class="input-group-addon"><i class="glyphicon glyphicon-lock"></i></span>
-            <input class="form-control" type="password" name='password' placeholder="password"/>     
-          </div>	
           <div class="form-group">
-            <button type="button" class="btn btn-def btn-block">INgresar</button>
-          </div>
-          <div class="form-group text-center">
-            <a href="#">¿ Olvidaste tu passoword ? </a>&nbsp;|&nbsp;<a href="#">Soy nuevo</a>
+            <button type="button" class="btn btn-def btn-block">Enviar</button>
           </div>
         </form>        
       </div>  
