--- a/login/index.html
+++ b/login/index.html
@@ -29,7 +29,7 @@
             <button type="button" class="btn btn-def btn-block">INgresar</button>
           </div>
           <div class="form-group text-center">
-            <a href="#">¿ Olvidaste tu passoword ? </a>&nbsp;|&nbsp;<a href="#">Soy nuevo</a>
+            <a href="recuperarpasword.html">¿ Olvidaste tu passoword ? </a>&nbsp;|&nbsp;<a href="#">Soy nuevo</a>
           </div>
         </form>        
       </div>  
