--- a/getshop/index.html
+++ b/getshop/index.html
@@ -8,7 +8,7 @@
       <!-- Latest compiled and minified CSS -->
       <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css" integrity="sha512-dTfge/zgoMYpP7QbHy4gWMEGsbsdZeCXz7irItjcC3sPUFtf0kuFbDz/ixG7ArTxmDjLXDmezHubeNikyKGVyQ==" crossorigin="anonymous">
    </head>
-   <body>
+   <body class="">
       <h1>Gestionar Carrito</h1>
       <table class='shopping-cart table table-bordered'>
          <tr>
@@ -21,7 +21,7 @@
             <th>Opción</th>
          </tr>
          <tr>
-            <td class='product-image'>
+            <td class='product-image class="info'>
                <img src='http://s.cdpn.io/3/dingo-dog-bones.jpg'>
             </td>
             <td class='product-name'>
